--- a/index.html
+++ b/index.html
@@ -333,22 +333,20 @@ $(document).ready(function () {
 <p><br></p>
 <h1 style="text-align: center;" markdown="1">
 <p>Wine Rating - What’s behind great wines?</p>
-<h6 style="text-align: center;">
+<p><br></p>
+<h4 style="text-align: center;" markdown="1">
 Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang (yz3736)
 </h6>
-<br></br>
-<h6 style="text-align: center;">
-<img src="image/main_pic.jpg" style="width:50%">
-</h6>
-<p>(Wordcloud)</p>
-<div id="introduction" class="section level2">
-<h2>Introduction</h2>
+<p><br></p>
 <p>Wine is one of the most commonly seen alcoholic drinks. With wine consumption in the U.S. at an all-time high, there are a huge amount of varieties of wine on the market. Consumers are more eager to learn about how to pick a good wine. There are many review systems online such as Vinno, Wine Enthusiasts. It is important for the consumers to learn what is behind those ratings.</p>
 <p>This data offers us a great opportunity to explore what factors are associated with wine ratings. We hope to conduct regression analysis of the wine rating and price based on location/grape type/notes/region to see if there are significant differences among these factors.The regression model would help customers estimate and predict wine rating with a series of wine characteristics. We also want to provide people with a interactive website to visualize wine ratings and prices.</p>
+<h6 style="text-align: center;">
+<img src="image/all_wine_wordcloud.png" style="width:70%">
+</h6>
 <p><br></p>
-</div>
-<div id="fun-facts-summary" class="section level2">
-<h2>Fun Facts Summary</h2>
+<div id="fun-facts-summary" class="section level3">
+<h3>Fun Facts Summary</h3>
+<p><br></p>
 <ul>
 <li><p>2002 was the year of highest average wine price for sparkling wine - above $100!</p></li>
 <li><p>2004 was the year of highest average wine price for white wine - above $50!</p></li>
