changed report toc and index format

--- a/about.html
+++ b/about.html
@@ -306,7 +306,7 @@ $(document).ready(function () {
   <a href="report.html">Project Report</a>
 </li>
 <li>
-  <a href="https://www.youtube.com/watch?v=W-cQ8M_y7MY&amp;feature=youtu.be&amp;hd=1">
+  <a href="https://www.youtube.com/watch?v=ULm6gKnIc2E">
     <span class="fa fa-youtube fa-lg"></span>
      
   </a>
