--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Wine Rating - What’s behind great wines?</title>
+<title>index.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -326,13 +326,18 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Wine Rating - What’s behind great wines?</h1>
 
 </div>
 
 
 <p><br></p>
-<p><strong>Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang (yz3736)</strong></p>
+<h1 style="text-align: center;">
+Wine Rating - What’s behind great wines?
+</h1>
+<p><br></p>
+<h4 style="text-align: center;" markdown="1">
+<strong>Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang (yz3736)</strong>
+</h1>
 <p><br></p>
 <p>Wine is one of the most commonly seen alcoholic drinks, and there is a tremendous amount of knowledge about wine history, wine categories, and what characterizes a great bottle of wine.</p>
 <p>This dataset offers us an excellent opportunity to explore what factors are associated with wine ratings. We hope to firstly get the image of wine price and rating trend using exploratory graphs. We also hope to identify the keywords of each type of wine using the word cloud tools. We also aim to use an interactive map for a better demonstration of wine distribution geographically.</p>
