--- a/index.html
+++ b/index.html
@@ -332,16 +332,16 @@ $(document).ready(function () {
 
 <p><br></p>
 <h1 style="text-align: center;">
-Wine Rating - What’s behind great wines?
+What’s behind great wines?
 </h1>
 <p><br></p>
 <h4 style="text-align: center;" markdown="1">
 <strong>Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang (yz3736)</strong>
 </h1>
 <p><br></p>
-<p>Wine is one of the most commonly seen alcoholic drinks, and there is a tremendous amount of knowledge about wine history, wine categories, and what characterizes a great bottle of wine.</p>
-<p>This dataset offers us an excellent opportunity to explore what factors are associated with wine ratings. We hope to firstly get the image of wine price and rating trend using exploratory graphs. We also hope to identify the keywords of each type of wine using the word cloud tools. We also aim to use an interactive map for a better demonstration of wine distribution geographically.</p>
-<p>In addition, we hope to conduct regression analyses of the wine rating and price and better capture the relationship between wine rating and prices. The regression models would help customers estimate and predict wine rating with a series of wine characteristics.</p>
+<p>Wine is one of the most common alcoholic drinks around the world and there is a tremendous amount of knowledge about wine history, wine categories, and what characterizes a great bottle of wine.</p>
+<p>This dataset offers us an excellent opportunity to explore what factors are associated with wine ratings. We hope to first explore the relationship between wine prices and trends in rating over time using exploratory graphs. We also hope to identify the keywords of each type of wine using the word clouds. We will also use an interactive map to better demonstrate the geographic distribution of wine.</p>
+<p>In addition, we hope to conduct regression analyses of the wine rating and price to better capture the relationship between wine rating and prices. The regression models would help customers estimate and predict wine rating with a series of wine characteristics.</p>
 <h6 style="text-align: center;">
 <img src="image/all_wine_wordcloud.png" style="width:70%">
 </h6>
@@ -353,7 +353,7 @@ Wine Rating - What’s behind great wines?
 <li><p>2002 was the year of highest average wine price for sparkling wine - above $100!</p></li>
 <li><p>2004 was the year of highest average wine price for white wine - above $50!</p></li>
 <li><p>England was the country of highest wine rating overall - average rating was 92/100.</p></li>
-<li><p>Words appeared most frequently for red wine, white wine, rose wine and sparkling wine are fruit, acidity, acidity and apple, respectively.</p></li>
+<li><p>Words appeared most frequently for red wine, white wine, rose wine and sparkling wine are fruit, acidity, acidity, and apple, respectively.</p></li>
 <li><p>Relationship between wine price and rating are segmented - see details in <a href="regression.html">regression analyses</a>!</p></li>
 </ul>
 </div>
