--- a/data_intro.html
+++ b/data_intro.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About the data</title>
+<title>About the Data</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -326,7 +326,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About the data</h1>
+<h1 class="title toc-ignore">About the Data</h1>
 
 </div>
 
