--- a/about.html
+++ b/about.html
@@ -337,8 +337,8 @@ $(document).ready(function () {
 <p>I’m Jady, a second year MPH student in Biostatistics at Columbia University Mailman School of Public Health. I received my BS in Statistics and Economics from Boston University. My professional interests include data science and clinical trial methodology. My favorite wine is called Josh and wine type is rose.</p>
 <p><br></br></p>
 </div>
-<div id="veru-xu" class="section level1">
-<h1><a href=""><img class="circle" src="image/vera.png"></a><span style="padding-left:25px"> Veru Xu</h1>
+<div id="vera-xu" class="section level1">
+<h1><a href=""><img class="circle" src="image/vera.png"></a><span style="padding-left:25px"> Vera Xu</h1>
 <p>I’m Vera, also a 2nd year MPH student in Biostatistics. My professional interest is in healthcare and management consulting. In my spare time, I actually drink wine very frequently. My favorite bottle of wine is Hess Select Cabernet Sauvignon 2016 - it’s not pricy, of great structure and a good choice to pair with red meat.</p>
 <p><br></br></p>
 </div>
