--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ $(document).ready(function () {
 
 <p><br></p>
 <h1 style="text-align: center;">
-What’s behind great wines?
+What’s Behind Great Wines?
 </h1>
 <p><br></p>
 <h4 style="text-align: center;" markdown="1">
@@ -346,8 +346,8 @@ What’s behind great wines?
 <img src="image/all_wine_wordcloud.png" style="width:70%">
 </h6>
 <p><br></p>
-<div id="fun-facts-summary" class="section level2">
-<h2>Fun Facts Summary</h2>
+<div id="fun-facts" class="section level2">
+<h2>Fun Facts</h2>
 <p><br></p>
 <ul>
 <li><p>2002 was the year of highest average wine price for sparkling wine - above $100!</p></li>
