--- a/data_intro.html
+++ b/data_intro.html
@@ -306,7 +306,7 @@ $(document).ready(function () {
   <a href="report.html">Project Report</a>
 </li>
 <li>
-  <a href="https://www.youtube.com/watch?v=ULm6gKnIc2E">
+  <a href="https://youtu.be/A1iWprvTfj8">
     <span class="fa fa-youtube fa-lg"></span>
      
   </a>
